--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,28 @@
   become: true
   tasks:
 
-  - name: update repository index 
+  - name: update repository index for Ubuntu 
     apt:
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  - name: install apache2 package
+  - name: install apache2 and php packages for Ubuntu
     apt:
-      name: apache2
+      name:
+        - apache2
+        - libapache2-mod-php
       state: latest
     when: ansible_distribution == "Ubuntu" 
 
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index 
+  - name: update repository index for CentOS 
     dnf:
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
-  - name: install apache2 package
+  - name: install apache and php packages for CentOS
     dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS" 
-
-  - name: add php support for apache
-    dnf:
-      name: php
+      name:
+        - httpd
+        - php
       state: latest
     when: ansible_distribution == "CentOS"
