--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,28 +4,10 @@
   become: true
   tasks:
 
-  - name: update repository index for Ubuntu 
-    apt:
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache2 and php packages for Ubuntu
-    apt:
+  - name: install apache and php
+    package:
       name:
-        - apache2
-        - libapache2-mod-php
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
-    when: ansible_distribution == "Ubuntu" 
-
-  - name: update repository index for CentOS 
-    dnf:
       update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install apache and php packages for CentOS
-    dnf:
-      name:
-        - httpd
-        - php
-      state: latest
-    when: ansible_distribution == "CentOS"
